--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build
 on:
   push:
     branches:
-      - master
+      - rebranding-2024
   pull_request:
 jobs:
   build:
@@ -27,35 +27,8 @@ jobs:
       - name: Build site
         run: hugo
 
-      - name: Create a CNAME file mapping to our custom domain
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        run: echo 'build.prestashop-project.org' > public/CNAME
-
-      - name: Set up algolia CLI
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        uses: algolia/setup-algolia-cli@master
-        with:
-          version: '1.2.1'
-        env:
-          ALGOLIA_APPLICATION_ID: ${{ secrets.BLOG_ALGOLIA_APPLICATION_ID }}
-          ALGOLIA_ADMIN_API_KEY: ${{ secrets.BLOG_ALGOLIA_ADMIN_API_KEY }}
-
-      - name: Update algolia index
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        env:
-          ALGOLIA_APPLICATION_ID: ${{ secrets.BLOG_ALGOLIA_APPLICATION_ID }}
-          ALGOLIA_ADMIN_API_KEY: ${{ secrets.BLOG_ALGOLIA_ADMIN_API_KEY }}
-        run: |
-          algolia --version
-          echo "Clear algolia blog index"
-          algolia indices clear blog --confirm
-          echo "Push new objects"
-          algolia objects import blog -F public/algolia.ndjson 
-          echo "Clean up"
-          rm public/algolia.ndjson
-
       - name: Deploy
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/rebranding-2024' }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
