--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0
+          ref: rebranding-2024
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
@@ -29,7 +30,6 @@ jobs:
         run: hugo
 
       - name: Deploy
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/rebranding-2024' }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
